# poe2-waystone-analyzer-v3

./: .env.example  .gitignore  BETA_NOTES.md  CHANGELOG.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: implementation-plan.md  overlay-ui-spec.md  release-checklist.md
scripts/: verify-adapter.mjs
src/: atlas-master-icons.ts  atlas-notable-icons.ts  autostart.ts  changelog.ts  clipboard.ts  diagnostics.ts  guide.ts  hotkeys.ts  interactive-rect.ts  main.ts  mock.test.ts  mock.ts  notify.ts  overlaySettings.ts  placement.ts  settings.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  default-meta.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/analyzer/: adapter.ts  atlas-masters.ts  displayAdapter.ts  mechanic-patterns.ts  mechanics.ts  meta-config.ts  meta-schema.ts  mod-parser.test.ts  mod-parser.ts  parser.test.ts  parser.ts  rewards.ts  scoring.ts  tablets.ts  unified-parser.test.ts  unified-parser.ts
src/components/: DangerList.ts  RelicPanel.ts
src/styles/: compact.css  full.css  panel.css  tokens.css
